micro optimization, mark done